      units to drown.
   -- Fixed niggle in the swim/move code so that when a unit attempts to
      move over water when not in a structure, the ability to move is
      calculated based on swim capacity, not walking capacity.   This is
      a change asked for by Pete Christie.   It also makes sense, and is
      one step closer to having swimming be an actual movement mode in
      its own right.
   -- Fixed a bug where spoils calculation could wrap causing spoils
      earned to be a negative value of an object.
   -- Fixed a bug where a disabled skill would be shown in the information
      about a race which had that skill as a specialty.
   -- Did a bit of grubbing around in the old atlantisproject dejanews
      archives and added a few ideas from there to the TODO list.
   -- Started looking at some of the older atlantisdev postings [pre my
      joining the list] and found a couple of good ideas there too.  The
      big problem is how long it would take me to completely go through
      that archive.  Anyone want to take that on and summarize for me
      ideas/extensions that have been proposed so they can be added to the
      todo list to at least consider? [This would probably also help to
      attach atlantisdev post articles to various todo list items, which
      has been requested].
   -- Fixed a bug where ADVANCE orders were combined together during the
      orders checker, but not during the actual game run.
   -- Added GIVE XXX ALL ITEMS which gives them everything, *including men*
      in one fell swoop!
   -- Fixed a bug where roads weren't used to calculate move to allow armies
      to help adjacent hexes.

Changes from 4.0.9 -> 4.0.10
--------------------------------------------------
   -- Fixed a bug where weapon length affected ranged weapons.
   -- Fixed a bug where at world generation time, one too few gates was
      generated, possibly resulting in a starting city with no gate.