@@ -256,13 +256,17 @@ void Soldier::SetupCombatItems()
 		// it's the right one.
 		if(!Globals->USE_PREPARE_COMMAND || (pBat->itemNum==unit->readyItem)) {
 			if(( pBat->flags & BattleItemType::SPECIAL ) && special != -1 ) {
-				// This unit already has a special attack
+				// This unit already has a special attack so give the item
+				// back to the unit as they aren't going to use it.
+				unit->items.SetNum(item, unit->items.GetNum(item)+1);
 				continue;
 			}
 			if(pBat->flags & BattleItemType::MAGEONLY &&
 			   unit->type != U_MAGE && unit->type != U_GUARDMAGE &&
 			   unit->type != U_APPRENTICE) {
-				// Only mages/apprentices can use this item
+				// Only mages/apprentices can use this item so give the
+				// item back to the unit as they aren't going to use it.
+				unit->items.SetNum(item, unit->items.GetNum(item)+1);
 				continue;
 			}
 
