@@ -398,3 +398,6 @@ Changes from 4.0.9 -> 4.0.10
    -- Fixed a bug where weapon length affected ranged weapons.
    -- Fixed a bug where at world generation time, one too few gates was
       generated, possibly resulting in a starting city with no gate.
+   -- Fixed a bug where battle items which were not usable (due to having
+      a combat spell set, or due to not being a mage and having a mage-only
+      item) being checked for use caused the items to be lost to the unit.
